[package]
name = "library_catalogue"
description = "A collection of utilities to track the books in your library."
licence = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Andrey Esaulov <esaulov.andrey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
